@@ -2,31 +2,42 @@ package dev.langchain4j.model.mistralai.internal.mapper;
 
 import static dev.langchain4j.internal.Exceptions.illegalArgument;
 import static dev.langchain4j.internal.JsonSchemaElementUtils.toMap;
-import static dev.langchain4j.internal.Utils.isNullOrBlank;
-import static dev.langchain4j.internal.Utils.isNullOrEmpty;
+import static dev.langchain4j.internal.Utils.isNotNullOrBlank;
+import static dev.langchain4j.internal.Utils.isNotNullOrEmpty;
 import static dev.langchain4j.model.output.FinishReason.CONTENT_FILTER;
 import static dev.langchain4j.model.output.FinishReason.LENGTH;
 import static dev.langchain4j.model.output.FinishReason.OTHER;
 import static dev.langchain4j.model.output.FinishReason.STOP;
 import static dev.langchain4j.model.output.FinishReason.TOOL_EXECUTION;
+import static java.util.Collections.singletonList;
+import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toList;
 
 import dev.langchain4j.Internal;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.data.audio.Audio;
 import dev.langchain4j.data.image.Image;
 import dev.langchain4j.data.message.AiMessage;
+import dev.langchain4j.data.message.AudioContent;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.ImageContent;
+import dev.langchain4j.data.message.PdfFileContent;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.TextContent;
 import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import dev.langchain4j.data.message.UserMessage;
+import dev.langchain4j.data.pdf.PdfFile;
+import dev.langchain4j.exception.UnsupportedFeatureException;
 import dev.langchain4j.model.chat.request.ResponseFormat;
 import dev.langchain4j.model.chat.request.ToolChoice;
 import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
+import dev.langchain4j.model.mistralai.internal.api.MistralAiAudioBase64Content;
+import dev.langchain4j.model.mistralai.internal.api.MistralAiAudioUrlContent;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiChatCompletionResponse;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiChatMessage;
+import dev.langchain4j.model.mistralai.internal.api.MistralAiDocumentBase64Content;
+import dev.langchain4j.model.mistralai.internal.api.MistralAiDocumentUrlContent;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiFunction;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiFunctionCall;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiImageBase64Content;
@@ -37,6 +48,7 @@ import dev.langchain4j.model.mistralai.internal.api.MistralAiResponseFormat;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiResponseFormatType;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiRole;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiTextContent;
+import dev.langchain4j.model.mistralai.internal.api.MistralAiThinkingContent;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiTool;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiToolCall;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiToolChoiceName;
@@ -44,16 +56,20 @@ import dev.langchain4j.model.mistralai.internal.api.MistralAiToolType;
 import dev.langchain4j.model.mistralai.internal.api.MistralAiUsage;
 import dev.langchain4j.model.output.FinishReason;
 import dev.langchain4j.model.output.TokenUsage;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
 @Internal
 public class MistralAiMapper {
 
-    public static List<MistralAiChatMessage> toMistralAiMessages(List<ChatMessage> messages) {
-        return messages.stream().map(MistralAiMapper::toMistralAiMessage).collect(toList());
+    public static List<MistralAiChatMessage> toMistralAiMessages(List<ChatMessage> messages, boolean sendThinking) {
+        return messages.stream()
+                .map(message -> toMistralAiMessage(message, sendThinking))
+                .toList();
     }
 
-    static MistralAiChatMessage toMistralAiMessage(ChatMessage message) {
+    private static MistralAiChatMessage toMistralAiMessage(ChatMessage message, boolean sendThinking) {
         if (message instanceof SystemMessage systemMessage) {
             return MistralAiChatMessage.builder()
                     .role(MistralAiRole.SYSTEM)
@@ -62,27 +78,25 @@ public class MistralAiMapper {
         }
 
         if (message instanceof AiMessage aiMessage) {
-            if (!aiMessage.hasToolExecutionRequests()) {
-                return MistralAiChatMessage.builder()
-                        .role(MistralAiRole.ASSISTANT)
-                        .content(aiMessage.text())
-                        .build();
+            List<MistralAiMessageContent> contents = new ArrayList<>(2);
+            if (sendThinking && aiMessage.thinking() != null) {
+                var thinkingText = new MistralAiTextContent(aiMessage.thinking());
+                contents.add(new MistralAiThinkingContent(singletonList(thinkingText)));
+            }
+            if (isNotNullOrBlank(aiMessage.text())) {
+                contents.add(new MistralAiTextContent(aiMessage.text()));
             }
 
-            List<MistralAiToolCall> toolCalls = aiMessage.toolExecutionRequests().stream()
-                    .map(MistralAiMapper::toMistralAiToolCall)
-                    .collect(toList());
-
-            if (isNullOrBlank(aiMessage.text())) {
-                return MistralAiChatMessage.builder()
-                        .role(MistralAiRole.ASSISTANT)
-                        .toolCalls(toolCalls)
-                        .build();
+            List<MistralAiToolCall> toolCalls = null;
+            if (aiMessage.hasToolExecutionRequests()) {
+                toolCalls = aiMessage.toolExecutionRequests().stream()
+                        .map(MistralAiMapper::toMistralAiToolCall)
+                        .toList();
             }
 
             return MistralAiChatMessage.builder()
                     .role(MistralAiRole.ASSISTANT)
-                    .content(aiMessage.text())
+                    .content(contents.isEmpty() ? null : contents)
                     .toolCalls(toolCalls)
                     .build();
         }
@@ -95,6 +109,11 @@ public class MistralAiMapper {
         }
 
         if (message instanceof ToolExecutionResultMessage toolExecutionResultMessage) {
+            if (!toolExecutionResultMessage.hasSingleText()) {
+                throw new UnsupportedFeatureException(
+                        "Mistral AI does not support non-text content in tool results. "
+                                + "Only text content is supported.");
+            }
             return MistralAiChatMessage.builder()
                     .role(MistralAiRole.TOOL)
                     .toolCallId(toolExecutionResultMessage.id())
@@ -140,13 +159,40 @@ public class MistralAiMapper {
         };
     }
 
-    public static AiMessage aiMessageFrom(MistralAiChatCompletionResponse response) {
+    public static AiMessage aiMessageFrom(MistralAiChatCompletionResponse response, boolean returnThinking) {
         MistralAiChatMessage aiMistralMessage = response.getChoices().get(0).getMessage();
+
         List<MistralAiToolCall> toolCalls = aiMistralMessage.getToolCalls();
-        if (!isNullOrEmpty(toolCalls)) {
-            return AiMessage.from(toToolExecutionRequests(toolCalls));
+        List<ToolExecutionRequest> toolExecutionRequests = null;
+        if (isNotNullOrEmpty(toolCalls)) {
+            toolExecutionRequests = toToolExecutionRequests(toolCalls);
         }
-        return AiMessage.from(aiMistralMessage.asText());
+
+        String text = aiMistralMessage.getContent().stream()
+                .filter(content -> "text".equals(content.getType()))
+                .map(MistralAiTextContent.class::cast)
+                .map(MistralAiTextContent::getText)
+                .collect(joining("\n"));
+
+        String thinking = null;
+        if (returnThinking) {
+            List<String> thinkingTexts = aiMistralMessage.getContent().stream()
+                    .filter(content -> "thinking".equals(content.getType()))
+                    .map(MistralAiThinkingContent.class::cast)
+                    .map(MistralAiThinkingContent::getThinking)
+                    .flatMap(Collection::stream)
+                    .map(MistralAiTextContent::getText)
+                    .toList();
+            if (!thinkingTexts.isEmpty()) {
+                thinking = String.join("\n", thinkingTexts);
+            }
+        }
+
+        return AiMessage.builder()
+                .text(text)
+                .thinking(thinking)
+                .toolExecutionRequests(toolExecutionRequests)
+                .build();
     }
 
     public static List<ToolExecutionRequest> toToolExecutionRequests(List<MistralAiToolCall> mistralAiToolCalls) {
@@ -201,7 +247,8 @@ public class MistralAiMapper {
         }
     }
 
-    public static MistralAiResponseFormat toMistralAiResponseFormat(ResponseFormat responseFormat) {
+    public static MistralAiResponseFormat toMistralAiResponseFormat(
+            ResponseFormat responseFormat, boolean strictJsonSchema) {
         if (responseFormat == null) {
             return null;
         }
@@ -209,7 +256,7 @@ public class MistralAiMapper {
             case TEXT -> MistralAiResponseFormat.fromType(MistralAiResponseFormatType.TEXT);
             case JSON ->
                 responseFormat.jsonSchema() != null
-                        ? MistralAiResponseFormat.fromSchema(responseFormat.jsonSchema())
+                        ? MistralAiResponseFormat.fromSchema(responseFormat.jsonSchema(), strictJsonSchema)
                         : MistralAiResponseFormat.fromType(MistralAiResponseFormatType.JSON_OBJECT);
         };
     }
@@ -224,6 +271,16 @@ public class MistralAiMapper {
                         return image.url() != null
                                 ? new MistralAiImageUrlContent(image.url().toString())
                                 : new MistralAiImageBase64Content(image.base64Data());
+                    } else if (content instanceof AudioContent audioContent) {
+                        Audio audio = audioContent.audio();
+                        return audio.url() != null
+                                ? new MistralAiAudioUrlContent(audio.url().toString())
+                                : new MistralAiAudioBase64Content(audio.base64Data(), audio.mimeType());
+                    } else if (content instanceof PdfFileContent pdfFileContent) {
+                        PdfFile pdfFile = pdfFileContent.pdfFile();
+                        return pdfFile.url() != null
+                                ? new MistralAiDocumentUrlContent(pdfFile.url().toString())
+                                : new MistralAiDocumentBase64Content(pdfFile.base64Data(), pdfFile.mimeType());
                     } else {
                         throw illegalArgument("Unknown content type: " + content);
                     }
